Fix: Adjust UI element position to align with notifications

--- a/assets/css/packages/s11-floating-links.css
+++ b/assets/css/packages/s11-floating-links.css
@@ -9,8 +9,8 @@
 
 .s11-floating-links {
 	position: fixed;
-	right: 48px;
-	bottom: 48px;
+	right: 20px;
+	bottom: 20px;
 	z-index: 1000;
 	display: none;
 	flex-direction: column;
